# bazel-latex

./: .bazelignore  .cirrus.yml  .gitignore  BUILD  BUILD.bazel  CONTRIBUTING.md  COPYING  COPYING.txt  MODULE.bazel  README.md  WORKSPACE  dvi_sub.py  extensions.bzl  latex.bzl  latex_engine_cmds.bzl  patch-latexrun  patch-latexrun-force-colors  patch-latexrun-pull-21  patch-latexrun-relative-paths  repositories.bzl  requirements.in  requirements.txt  requirements_lock.txt  run_lualatex.py  run_pdflatex.py  run_pdflatex.sh  texlive_2022_repos.bzl  tool_wrapper.py  toolchain.bzl  version.bzl  view_output.sh  view_pdf.sh
.github/workflows/: ci.yaml
example/: BUILD.bazel  my_report.tex  references.bib  tikz.tex
example/bzlmod/: .gitignore  BUILD.bazel  MODULE.bazel  my_document.tex
example/bzlmod_use_texlive_deps/: BUILD.bazel  MODULE.bazel  my_document.tex
example/chapters/: introduction.tex
example/example_class/: BUILD  example_class.cls
example/test/: BUILD.bazel  test_examples.py
patches/: bezos-luatex  cleveref-subsubsubappendix  latexrun-force-colors  latexrun-pull-47  latexrun-pull-52  latexrun-pull-61  latexrun-pull-62  pdfcomment-luatex
tools/compute_dependencies/: .gitignore  compute_dependencies.py
