load(":toolchain.bzl", "latex_toolchain")

exports_files([
    "tool_wrapper.py",
    "view_output.sh",
])

toolchain_type(
    name = "latex_toolchain_type",
    visibility = ["//visibility:public"],
)

latex_toolchain(
    exec_compatible_with = [
        "@bazel_tools//platforms:freebsd",
        "@bazel_tools//platforms:x86_64",
    ],
    platform = "amd64-freebsd",
)

latex_toolchain(
    name = "latex_toolchain_aarch64-darwin",
    exec_compatible_with = [
        "@bazel_tools//platforms:osx",
        "@bazel_tools//platforms:aarch64",
    ],
    platform = "universal-darwin",
)

latex_toolchain(
    name = "latex_toolchain_x86_64-darwin",
    exec_compatible_with = [
        "@bazel_tools//platforms:osx",
        "@bazel_tools//platforms:x86_64",
    ],
    platform = "universal-darwin",
)

latex_toolchain(
    exec_compatible_with = [
        "@bazel_tools//platforms:linux",
        "@bazel_tools//platforms:x86_64",
    ],
    platform = "x86_64-linux",
)

filegroup(
    name = "core_dependencies",
    srcs = [
        "@bazel_latex//:tool_wrapper_py",
        "@texlive_extra__tlpkg__TeXLive",
        "@texlive_texmf__texmf-dist__fonts__enc__dvips__base",
        "@texlive_texmf__texmf-dist__fonts__enc__dvips__cm-super",
        "@texlive_texmf__texmf-dist__fonts__enc__dvips__lm",
        "@texlive_texmf__texmf-dist__fonts__map__dvips__updmap",
        "@texlive_texmf__texmf-dist__fonts__map__pdftex__updmap",
        "@texlive_texmf__texmf-dist__fonts__opentype__public__lm",
        "@texlive_texmf__texmf-dist__fonts__tfm__public__cm",
        "@texlive_texmf__texmf-dist__fonts__tfm__public__latex-fonts",
        "@texlive_texmf__texmf-dist__fonts__tfm__public__lm",
        "@texlive_texmf__texmf-dist__fonts__type1__public__amsfonts__cm",
        "@texlive_texmf__texmf-dist__fonts__type1__public__cm-super",
        "@texlive_texmf__texmf-dist__fonts__type1__public__lm",
        "@texlive_texmf__texmf-dist__scripts__texlive",
        "@texlive_texmf__texmf-dist__tex__generic__config",
        "@texlive_texmf__texmf-dist__tex__generic__hyphen",
        "@texlive_texmf__texmf-dist__tex__generic__iftex",
        "@texlive_texmf__texmf-dist__tex__generic__infwarerr",
        "@texlive_texmf__texmf-dist__tex__generic__kvsetkeys",
        "@texlive_texmf__texmf-dist__tex__generic__ltxcmds",
        "@texlive_texmf__texmf-dist__tex__generic__pdftexcmds",
        "@texlive_texmf__texmf-dist__tex__generic__tex-ini-files",
        "@texlive_texmf__texmf-dist__tex__generic__unicode-data",
        "@texlive_texmf__texmf-dist__tex__latex__base",
        "@texlive_texmf__texmf-dist__tex__latex__kvoptions",
        "@texlive_texmf__texmf-dist__tex__latex__l3backend",
        "@texlive_texmf__texmf-dist__tex__latex__l3kernel",
        "@texlive_texmf__texmf-dist__tex__latex__l3packages__xparse",
        "@texlive_texmf__texmf-dist__tex__latex__latexconfig",
        "@texlive_texmf__texmf-dist__tex__latex__lm",
        "@texlive_texmf__texmf-dist__tex__luatex__lua-uni-algos",
        "@texlive_texmf__texmf-dist__tex__luatex__lualibs",
        "@texlive_texmf__texmf-dist__tex__luatex__luaotfload",
        "@texlive_texmf__texmf-dist__web2c",
    ],
    visibility = ["//visibility:public"],
)

# buildifier: disable=native-py
py_binary(
    name = "tool_wrapper_py",
    srcs = ["tool_wrapper.py"],
    main = "tool_wrapper.py",
    visibility = ["//visibility:public"],
)
