load("@rules_python//python:defs.bzl", "py_binary")
load(":toolchain.bzl", "latex_toolchain")

exports_files([
    "view_output.sh",
])

toolchain_type(
    name = "latex_toolchain_type",
    visibility = ["//visibility:public"],
)

latex_toolchain(
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:freebsd",
    ],
    platform = "amd64-freebsd",
)

latex_toolchain(
    name = "latex_toolchain_aarch64-darwin",
    exec_compatible_with = [
        "@platforms//cpu:aarch64",
        "@platforms//os:osx",
    ],
    platform = "universal-darwin",
)

latex_toolchain(
    name = "latex_toolchain_x86_64-darwin",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:osx",
    ],
    platform = "universal-darwin",
)

latex_toolchain(
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    platform = "x86_64-linux",
)

filegroup(
    name = "core_dependencies",
    srcs = [
        "@texlive_extra__tlpkg__TeXLive",
        "@texlive_texmf__texmf-dist__fonts__enc__dvips__base",
        "@texlive_texmf__texmf-dist__fonts__enc__dvips__cm-super",
        "@texlive_texmf__texmf-dist__fonts__enc__dvips__lm",
        "@texlive_texmf__texmf-dist__fonts__opentype__public__lm",
        "@texlive_texmf__texmf-dist__fonts__tfm__public__cm",
        "@texlive_texmf__texmf-dist__fonts__tfm__public__latex-fonts",
        "@texlive_texmf__texmf-dist__fonts__tfm__public__lm",
        "@texlive_texmf__texmf-dist__fonts__type1__public__amsfonts__cm",
        "@texlive_texmf__texmf-dist__fonts__type1__public__cm-super",
        "@texlive_texmf__texmf-dist__fonts__type1__public__lm",
        "@texlive_texmf__texmf-dist__scripts__texlive",
        "@texlive_texmf__texmf-dist__tex__generic__config",
        "@texlive_texmf__texmf-dist__tex__generic__hyphen",
        "@texlive_texmf__texmf-dist__tex__generic__iftex",
        "@texlive_texmf__texmf-dist__tex__generic__infwarerr",
        "@texlive_texmf__texmf-dist__tex__generic__kvsetkeys",
        "@texlive_texmf__texmf-dist__tex__generic__ltxcmds",
        "@texlive_texmf__texmf-dist__tex__generic__pdftexcmds",
        "@texlive_texmf__texmf-dist__tex__generic__unicode-data",
        "@texlive_texmf__texmf-dist__tex__latex__base",
        "@texlive_texmf__texmf-dist__tex__latex__kvoptions",
        "@texlive_texmf__texmf-dist__tex__latex__l3backend",
        "@texlive_texmf__texmf-dist__tex__latex__l3kernel",
        "@texlive_texmf__texmf-dist__tex__latex__l3packages__xparse",
        "@texlive_texmf__texmf-dist__tex__latex__latexconfig",
        "@texlive_texmf__texmf-dist__tex__latex__lm",
        "@texlive_texmf__texmf-dist__tex__luatex__lua-uni-algos",
        "@texlive_texmf__texmf-dist__tex__luatex__lualibs",
        "@texlive_texmf__texmf-dist__tex__luatex__luaotfload",
        "@texlive_texmf__texmf-dist__web2c",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "ghostscript_dependencies",
    srcs = [
        "@texlive_texmf__texmf-dist__dvips__base",
        "@texlive_texmf__texmf-dist__dvips__l3backend",
    ],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "dvi_sub",
    srcs = ["dvi_sub.py"],
    visibility = ["//visibility:public"],
)
