load("@rules_python//python:defs.bzl", "py_binary")
load(":toolchain.bzl", "latex_toolchain")

exports_files([
    "view_output.sh",
])

toolchain_type(
    name = "latex_toolchain_type",
    visibility = ["//visibility:public"],
)

# This toolchain seems to be missing the 'biber' binary, causing Bazel to produce the following error
# "no such target '@@texlive_bin__amd64-freebsd//:biber': target 'biber' not declared in package ''"
# Disabled for now
# latex_toolchain(
#     exec_compatible_with = [
#         "@platforms//cpu:x86_64",
#         "@platforms//os:freebsd",
#     ],
#     platform = "amd64-freebsd",
# )

latex_toolchain(
    name = "latex_toolchain_aarch64-darwin",
    exec_compatible_with = [
        "@platforms//cpu:aarch64",
        "@platforms//os:osx",
    ],
    platform = "universal-darwin",
)

latex_toolchain(
    name = "latex_toolchain_x86_64-darwin",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:osx",
    ],
    platform = "universal-darwin",
)

latex_toolchain(
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    platform = "x86_64-linux",
)

filegroup(
    name = "core_dependencies",
    srcs = [
        "@bazel_latex_texlive//:texlive_extra__tlpkg__TeXLive",
        "@bazel_latex_texlive//:texlive_texmf__texmf-dist__fonts__enc__dvips__base",
        "@bazel_latex_texlive//:texlive_texmf__texmf-dist__fonts__enc__dvips__cm-super",
        "@bazel_latex_texlive//:texlive_texmf__texmf-dist__fonts__enc__dvips__lm",
        "@bazel_latex_texlive//:texlive_texmf__texmf-dist__fonts__opentype__public__lm",
        "@bazel_latex_texlive//:texlive_texmf__texmf-dist__fonts__tfm__public__cm",
        "@bazel_latex_texlive//:texlive_texmf__texmf-dist__fonts__tfm__public__latex-fonts",
        "@bazel_latex_texlive//:texlive_texmf__texmf-dist__fonts__tfm__public__lm",
        "@bazel_latex_texlive//:texlive_texmf__texmf-dist__fonts__type1__public__amsfonts__cm",
        "@bazel_latex_texlive//:texlive_texmf__texmf-dist__fonts__type1__public__cm-super",
        "@bazel_latex_texlive//:texlive_texmf__texmf-dist__fonts__type1__public__lm",
        "@bazel_latex_texlive//:texlive_texmf__texmf-dist__scripts__texlive",
        "@bazel_latex_texlive//:texlive_texmf__texmf-dist__tex__generic__config",
        "@bazel_latex_texlive//:texlive_texmf__texmf-dist__tex__generic__hyphen",
        "@bazel_latex_texlive//:texlive_texmf__texmf-dist__tex__generic__iftex",
        "@bazel_latex_texlive//:texlive_texmf__texmf-dist__tex__generic__infwarerr",
        "@bazel_latex_texlive//:texlive_texmf__texmf-dist__tex__generic__kvsetkeys",
        "@bazel_latex_texlive//:texlive_texmf__texmf-dist__tex__generic__ltxcmds",
        "@bazel_latex_texlive//:texlive_texmf__texmf-dist__tex__generic__pdftexcmds",
        "@bazel_latex_texlive//:texlive_texmf__texmf-dist__tex__generic__unicode-data",
        "@bazel_latex_texlive//:texlive_texmf__texmf-dist__tex__latex__base",
        "@bazel_latex_texlive//:texlive_texmf__texmf-dist__tex__latex__kvoptions",
        "@bazel_latex_texlive//:texlive_texmf__texmf-dist__tex__latex__l3backend",
        "@bazel_latex_texlive//:texlive_texmf__texmf-dist__tex__latex__l3kernel",
        "@bazel_latex_texlive//:texlive_texmf__texmf-dist__tex__latex__l3packages__xparse",
        "@bazel_latex_texlive//:texlive_texmf__texmf-dist__tex__latex__latexconfig",
        "@bazel_latex_texlive//:texlive_texmf__texmf-dist__tex__latex__lm",
        "@bazel_latex_texlive//:texlive_texmf__texmf-dist__tex__luatex__lua-uni-algos",
        "@bazel_latex_texlive//:texlive_texmf__texmf-dist__tex__luatex__lualibs",
        "@bazel_latex_texlive//:texlive_texmf__texmf-dist__tex__luatex__luaotfload",
        "@bazel_latex_texlive//:texlive_texmf__texmf-dist__web2c",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "ghostscript_dependencies",
    srcs = [
        "@bazel_latex_texlive//:texlive_texmf__texmf-dist__dvips__base",
        "@bazel_latex_texlive//:texlive_texmf__texmf-dist__dvips__l3backend",
    ],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "dvi_sub",
    srcs = ["dvi_sub.py"],
    visibility = ["//visibility:public"],
)
