load("@bazel_latex//:latex.bzl", "latex_document")

latex_document(
    name = "my_report",
    srcs = glob([
        "chapters/*.tex",
    ]) + [
        "@bazel_latex//packages:biblatex",
        "references.bib",
        "//example/example_class:example_class",
    ],
    cmd_flags = ["--bibtex-cmd=biber"],
    main = "my_report.tex",
)
