load("@bazel_latex//:latex.bzl", "latex_document")

latex_document(
    name = "my_report",
    srcs = glob([
        "chapters/*.tex",
    ]) + [
        "@bazel_latex//packages:biblatex",
        "references.bib",
        "//example/example_class:example_class",
    ],
    bib_tool = "biber",  # Is the default
    main = "my_report.tex",
)

latex_document(
    name = "my_dvi_report",
    srcs = glob([
        "chapters/*.tex",
    ]) + [
        "@bazel_latex//packages:biblatex",
        "references.bib",
        "//example/example_class:example_class",
    ],
    format = "dvi",
    main = "my_report.tex",
)
